[project]
name = "comfyui_perpweight"
description = "A novel weighting scheme for token vectors from CLIP. Allows a wider range of values for the weight. Inspired by Perp-Neg."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/bvhari/ComfyUI_PerpWeight"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_PerpWeight"
Icon = ""
